辞書を追加

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="./css/contents.css">
         <link rel="stylesheet" href="./css/dashboard.css">
         
+        <script src="./js/dictionary.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
