--- a/index.html
+++ b/index.html
@@ -428,24 +428,31 @@
                     </form>
                 </fieldset>
                 
-                <fieldset id="result" class="col-md-4">
-                    <legend>結果</legend>
-                    <div class="row">
-                        <div class="form-group col-md-6">
-                            <label for="myMoves">自分の技</label>
-                            <select multiple id="myMoves" class="form-control"></select>
+                <div class="col-md-4">
+                    <fieldset id="action">
+                        <legend>行動</legend>
+                        <div class="row">
+                            <div class="form-group col-md-6">
+                                <label for="myMoves">自分の技</label>
+                                <select multiple id="myMoves" class="form-control"></select>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="oppMoves">相手の技</label>
+                                <select multiple id="oppMoves" class="form-control"></select>
+                            </div>
                         </div>
-                        <div class="form-group col-md-6">
-                            <label for="oppMoves">相手の技</label>
-                            <select multiple id="oppMoves" class="form-control"></select>
+                        <div class="form-group">
+                            <div class="pull-right">
+                                <button id="clear" class="btn btn-secondary" type="button">クリア</button>
+                                <button id="calculate" class="btn btn-secondary" type="button">計算</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-10"></div>
-                        <button id="calculate" class="btn btn-secondary" type="button">計算</button>
-                    </div>
-                    <textarea id="result" type="text" class="form-control" value="" rows="50"></textarea>
-                </fieldset>
+                    </fieldset>
+                    <fieldset id="result">
+                        <legend>結果</legend>
+                        <textarea id="result" type="text" class="form-control" value="" rows="50"></textarea>
+                    </fieldset>
+                </div>
             </div>
         </div>
         
