技名のオートコンプリートが無効になっていたのを修正

--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
                         <div class="moves form-group">
                             <label>技</label>
                             <div class="input-group">
-                                <input type="text" id="moveText1" class="form-control">
+                                <input type="text" id="moveText1" class="move-text form-control">
                                 <span class="input-group-btn"><button id="addMove1" class="btn btn-secondary" type="button">追加</button></span>
                             </div>
                             <div class="input-group">
-                                <input type="text" id="moveText2" class="form-control">
+                                <input type="text" id="moveText2" class="move-text form-control">
                                 <span class="input-group-btn"><button id="addMove2" class="btn btn-secondary" type="button">追加</button></span>
                             </div>
                             <div class="input-group">
-                                <input type="text" id="moveText3" class="form-control">
+                                <input type="text" id="moveText3" class="move-text form-control">
                                 <span class="input-group-btn"><button id="addMove3" class="btn btn-secondary" type="button">追加</button></span>
                             </div>
                             <div class="input-group">
-                                <input type="text" id="moveText4" class="form-control">
+                                <input type="text" id="moveText4" class="move-text form-control">
                                 <span class="input-group-btn"><button id="addMove4" class="btn btn-secondary" type="button">追加</button></span>
                             </div>
                             
@@ -262,19 +262,19 @@
                         <div class="moves form-group">
                             <label>技</label>
                             <div class="input-group">
-                                <input type="text" id="moveText1" class="form-control">
+                                <input type="text" id="moveText1" class="move-text form-control">
                                 <span class="input-group-btn"><button id="addMove1" class="btn btn-secondary" type="button">追加</button></span>
                             </div>
                             <div class="input-group">
-                                <input type="text" id="moveText2" class="form-control">
+                                <input type="text" id="moveText2" class="move-text form-control">
                                 <span class="input-group-btn"><button id="addMove2" class="btn btn-secondary" type="button">追加</button></span>
                             </div>
                             <div class="input-group">
-                                <input type="text" id="moveText3" class="form-control">
+                                <input type="text" id="moveText3" class="move-text form-control">
                                 <span class="input-group-btn"><button id="addMove3" class="btn btn-secondary" type="button">追加</button></span>
                             </div>
                             <div class="input-group">
-                                <input type="text" id="moveText4" class="form-control">
+                                <input type="text" id="moveText4" class="move-text form-control">
                                 <span class="input-group-btn"><button id="addMove4" class="btn btn-secondary" type="button">追加</button></span>
                             </div>
                             
