シミュレート部分を実装

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     </fieldset>
                     <fieldset id="result">
                         <legend>結果</legend>
-                        <textarea id="result" type="text" class="form-control" value="" rows="50"></textarea>
+                        <textarea id="resultText" type="text" class="form-control" value="" rows="50"></textarea>
                     </fieldset>
                 </div>
             </div>
