--- a/index.html
+++ b/index.html
@@ -450,6 +450,12 @@
                     </fieldset>
                     <fieldset id="result">
                         <legend>結果</legend>
+                        <div class="progress">
+  	                      <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                                進捗: 0%
+                            </div>
+                        </div>
+                        
                         <textarea id="resultText" type="text" class="form-control" value="" rows="50"></textarea>
                     </fieldset>
                 </div>
