反復回数を指定できるようにした

--- a/index.html
+++ b/index.html
@@ -443,6 +443,12 @@
                         </div>
                         <div class="form-group">
                             <div class="pull-right">
+                                <label>反復回数</label>
+                                <select id="loopCount">
+                                    <option value="10">10</option>
+                                    <option value="50" selected>50</option>
+                                    <option value="100">100</option>
+                                </select>
                                 <button id="clear" class="btn btn-secondary" type="button">クリア</button>
                                 <button id="calculate" class="btn btn-secondary" type="button">計算</button>
                             </div>
