--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="https://github.com/odanado/PokemonWinningPercentage" target="_blank">GitHub</a></li>
+                        <li><a class="navbar-brand" href="https://github.com/odanado/PokemonWinningPercentage" target="_blank">GitHub</a></li>
                     </ul>
                 </div>
             </div>
