自分側の勝率と敗率を表示を実装した

--- a/index.html
+++ b/index.html
@@ -471,6 +471,9 @@
                                 進捗: 0%
                             </div>
                         </div>
+                        <div id="WPResult">
+                            <p></p>
+                        </div>
                         
                         <ul class="nav nav-tabs">
                             <li class="active"><a href="#myProbDist" data-toggle="tab">自分の確率分布</a></li>
