両壁に対応

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                             <ul class="nav nav-tabs">
                                 <li class="active"><a href="#myEVTab" data-toggle="tab">努力値</a></li>
                                 <li><a href="#myBoostTab" data-toggle="tab">積み技</a></li>
+                                <li><a href="#myStatusTab" data-toggle="tab">状態</a></li>
                                 <li><a href="#myIVTab" data-toggle="tab">個体値</a></li>
                             </ul>
                             
@@ -241,6 +242,18 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div id="myStatusTab" class="tab-pane fade">
+                                    <div class="row">
+                                        <div class="col-md-1"></div>
+                                        <div class="checkbox col-md-5">
+                                            <label><input type="checkbox" class="reflect">リフレクター</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="checkbox col-md-5">
+                                            <label><input type="checkbox" class="lightScreen">ひかりのかべ</label>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -296,6 +309,7 @@
                             <ul class="nav nav-tabs">
                                 <li class="active"><a href="#oppEVTab" data-toggle="tab">努力値</a></li>
                                 <li><a href="#oppBoostTab" data-toggle="tab">積み技</a></li>
+                                <li><a href="#oppStatusTab" data-toggle="tab">状態</a></li>
                                 <li><a href="#oppIVTab" data-toggle="tab">個体値</a></li>
                             </ul>
                             <div class="tab-content">
@@ -429,6 +443,18 @@
                                         <div class="form-group col-md-5">
                                             <label>回避</label>
                                             <input type="number" class="evasion form-control" value="0" min="-6" max="6">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="oppStatusTab" class="tab-pane fade">
+                                    <div class="row">
+                                        <div class="col-md-1"></div>
+                                        <div class="checkbox col-md-5">
+                                            <label><input type="checkbox" class="reflect">リフレクター</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="checkbox col-md-5">
+                                            <label><input type="checkbox" class="lightScreen">ひかりのかべ</label>
                                         </div>
                                     </div>
                                 </div>
