タブの表示のバグを修正

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             </ul>
                             
                             <div class="tab-content">
-                                <div id="myIVTab" class="tab-pane fade in active">
+                                <div id="myIVTab" class="tab-pane fade">
                                     <div class="row">
                                         <div class="col-md-1"></div>
                                         <div class="form-group col-md-5">
@@ -149,7 +149,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div id="myEVTab" class="tab-pane fade">
+                                <div id="myEVTab" class="tab-pane fade in active">
                                     <div class="row">
                                         <div class="col-md-1"></div>
                                         <div class="form-group col-md-5">
@@ -313,7 +313,7 @@
                                 <li><a href="#oppIVTab" data-toggle="tab">個体値</a></li>
                             </ul>
                             <div class="tab-content">
-                                <div id="oppIVTab" class="tab-pane fade in active">
+                                <div id="oppIVTab" class="tab-pane fade">
                                     <div class="row">
                                         <div class="col-md-1"></div>
                                         <div class="form-group col-md-5">
@@ -353,7 +353,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div id="oppEVTab" class="tab-pane fade">
+                                <div id="oppEVTab" class="tab-pane fade in active">
                                     <div class="row">
                                         <div class="col-md-1"></div>
                                         <div class="form-group col-md-5">
