状態異常に対応した

--- a/index.html
+++ b/index.html
@@ -253,6 +253,35 @@
                                             <label><input type="checkbox" class="lightScreen">ひかりのかべ</label>
                                         </div>
                                     </div>
+                                    
+                                    <div class="row">
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="brn">火傷</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="par">麻痺</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="slp">眠り</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="frz">凍り</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="psn">毒</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="tox">猛毒</label>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -455,6 +484,35 @@
                                         <div class="col-md-1"></div>
                                         <div class="checkbox col-md-5">
                                             <label><input type="checkbox" class="lightScreen">ひかりのかべ</label>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="row">
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="brn">火傷</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="par">麻痺</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="slp">眠り</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="frz">凍り</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="psn">毒</label>
+                                        </div>
+                                        <div class="col-md-1"></div>
+                                        <div class="radio col-md-3">
+                                            <label><input type="radio" name="statusRadios" value="tox">猛毒</label>
                                         </div>
                                     </div>
                                 </div>
